--- a/HeroJourney/appsettings.json
+++ b/HeroJourney/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:herojourneydbserver.database.windows.net,1433;Initial Catalog=HeroJourney_db;Persist Security Info=False;User ID=mivanov93;Password=CSKA1948aaa!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=DESKTOP-1KM8KQB\\SQLEXPRESS;Database=HeroJourney;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
